--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-01-13 0.5.8
+    * new: merge data files into large one when GC (need restart)
+	* change: close bitcask in parallel 
+
 2012-11-20 0.5.7
     * new: dump HTree to disk to speed up boosting
 	* change: increase the size of data file to 4G 
