--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2015-06-11 0.7.1.5
+    * new: GC: add start_fid and end_fid argument
+    * improve: Log the reason of failing to open file
+    * bugfix: Avoid using stub_fd to create connection
+    * bugfix: Replace assert statement with error log
+
 2015-03-25 0.7.1
     * new: optimize_stat command
     * new: python test
